k8s/apolo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apolo-11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apolo-11
  template:
    metadata:
      labels:
        app: apolo-11
    spec:
      containers:
        - name: apolo-11
          image: apolo-11:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /app/apolo_11/config/config.yaml
              subPath: config.yaml
            - name: results
              mountPath: /data/results
      volumes:
        - name: config
          configMap:
            name: apolo-config
        - name: results
          persistentVolumeClaim:
            claimName: apolo-results
