k8s/apolo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apolo-11
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: apolo-reporter
