k8s/rabbitmq-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-network-policy
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: apolo-generator
        - podSelector:
            matchLabels:
              app: apolo-reporter
      ports:
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15672
